--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -21,31 +21,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "id": "cfb0c761",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-11 18:06:34.921639: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import tensorflow.keras.backend as K\n",
     "from collections import Counter\n",
     "from itertools import chain\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "160d5627",
    "metadata": {},
    "outputs": [],
@@ -57,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "a78b0e18",
    "metadata": {},
    "outputs": [
@@ -150,7 +145,7 @@
        "4       5      M   25          20   55455"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "3c18875d",
    "metadata": {},
    "outputs": [
@@ -243,7 +238,7 @@
        "4        5  Father of the Bride Part II (1995)                        Comedy"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "5b649241",
    "metadata": {},
    "outputs": [
@@ -342,7 +337,7 @@
        "4       1     2355       5  978824291"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "6a1ac486",
    "metadata": {},
    "outputs": [
@@ -376,52 +371,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "dcc5c18e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([\"Animation|Children's|Comedy\", \"Adventure|Children's|Fantasy\",\n",
-       "       'Comedy|Romance', ..., 'Drama', 'Drama', 'Drama|Thriller'],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "movies[\"genres\"].values"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
    "id": "02944626",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# lower=False?\n",
-    "tokenizer = Tokenizer(split='|', filters='')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "89370bfb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tokenizer.fit_on_texts(movies[\"genres\"].values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "75b57e3e",
    "metadata": {},
    "outputs": [
     {
@@ -447,41 +398,286 @@
        " 'film-noir': 18}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# lower=False?\n",
+    "tokenizer = Tokenizer(split='|', filters='')\n",
+    "tokenizer.fit_on_texts(movies[\"genres\"].values)\n",
     "tokenizer.word_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
+   "id": "73f6f886-633b-4689-9b04-398539f6f0c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# is this the best way?? why not three-hot?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "226f4b42",
    "metadata": {},
    "outputs": [],
    "source": [
-    "seq = tokenizer.texts_to_sequences(movies[\"genres\"].values)"
+    "seqs = tokenizer.texts_to_sequences(movies[\"genres\"].values)\n",
+    "seqs = pad_sequences(seqs, maxlen=3,padding='post').tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "91649392",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Comedy|Romance\n",
+      "[2, 5, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "idx = 2\n",
+    "print(movies[\"genres\"].iloc[idx])\n",
+    "print(seqs[idx])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "41d7f127-6e21-4ea6-ae69-f50b22c53c1e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies[\"genres\"] = seqs"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "91649392",
+   "id": "db1ba1f9-0cef-419a-a628-3d596bac894b",
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>userID</th>\n",
+       "      <th>movieID</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>timestamp</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>age</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>zipCode</th>\n",
+       "      <th>title</th>\n",
+       "      <th>genres</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1193</td>\n",
+       "      <td>5</td>\n",
+       "      <td>978300760</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "      <td>One Flew Over the Cuckoo's Nest (1975)</td>\n",
+       "      <td>[1, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>661</td>\n",
+       "      <td>3</td>\n",
+       "      <td>978302109</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "      <td>James and the Giant Peach (1996)</td>\n",
+       "      <td>[15, 9, 13]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>914</td>\n",
+       "      <td>3</td>\n",
+       "      <td>978301968</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "      <td>My Fair Lady (1964)</td>\n",
+       "      <td>[13, 5, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>3408</td>\n",
+       "      <td>4</td>\n",
+       "      <td>978300275</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "      <td>Erin Brockovich (2000)</td>\n",
+       "      <td>[1, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2355</td>\n",
+       "      <td>5</td>\n",
+       "      <td>978824291</td>\n",
+       "      <td>F</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48067</td>\n",
+       "      <td>Bug's Life, A (1998)</td>\n",
+       "      <td>[15, 9, 2]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000204</th>\n",
+       "      <td>6040</td>\n",
+       "      <td>1091</td>\n",
+       "      <td>1</td>\n",
+       "      <td>956716541</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>Weekend at Bernie's (1989)</td>\n",
+       "      <td>[2, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000205</th>\n",
+       "      <td>6040</td>\n",
+       "      <td>1094</td>\n",
+       "      <td>5</td>\n",
+       "      <td>956704887</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>Crying Game, The (1992)</td>\n",
+       "      <td>[1, 5, 11]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000206</th>\n",
+       "      <td>6040</td>\n",
+       "      <td>562</td>\n",
+       "      <td>5</td>\n",
+       "      <td>956704746</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>Welcome to the Dollhouse (1995)</td>\n",
+       "      <td>[2, 1, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000207</th>\n",
+       "      <td>6040</td>\n",
+       "      <td>1096</td>\n",
+       "      <td>4</td>\n",
+       "      <td>956715648</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>Sophie's Choice (1982)</td>\n",
+       "      <td>[1, 0, 0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1000208</th>\n",
+       "      <td>6040</td>\n",
+       "      <td>1097</td>\n",
+       "      <td>4</td>\n",
+       "      <td>956715569</td>\n",
+       "      <td>M</td>\n",
+       "      <td>25</td>\n",
+       "      <td>6</td>\n",
+       "      <td>11106</td>\n",
+       "      <td>E.T. the Extra-Terrestrial (1982)</td>\n",
+       "      <td>[1, 16, 8]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1000209 rows × 10 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array([[15,  9,  2],\n",
-       "       [ 7,  9, 16],\n",
-       "       [ 2,  5,  0],\n",
-       "       ...,\n",
-       "       [ 1,  0,  0],\n",
-       "       [ 1,  0,  0],\n",
-       "       [ 1,  4,  0]], dtype=int32)"
+       "         userID  movieID  rating  timestamp gender  age  occupation zipCode  \\\n",
+       "0             1     1193       5  978300760      F    1          10   48067   \n",
+       "1             1      661       3  978302109      F    1          10   48067   \n",
+       "2             1      914       3  978301968      F    1          10   48067   \n",
+       "3             1     3408       4  978300275      F    1          10   48067   \n",
+       "4             1     2355       5  978824291      F    1          10   48067   \n",
+       "...         ...      ...     ...        ...    ...  ...         ...     ...   \n",
+       "1000204    6040     1091       1  956716541      M   25           6   11106   \n",
+       "1000205    6040     1094       5  956704887      M   25           6   11106   \n",
+       "1000206    6040      562       5  956704746      M   25           6   11106   \n",
+       "1000207    6040     1096       4  956715648      M   25           6   11106   \n",
+       "1000208    6040     1097       4  956715569      M   25           6   11106   \n",
+       "\n",
+       "                                          title       genres  \n",
+       "0        One Flew Over the Cuckoo's Nest (1975)    [1, 0, 0]  \n",
+       "1              James and the Giant Peach (1996)  [15, 9, 13]  \n",
+       "2                           My Fair Lady (1964)   [13, 5, 0]  \n",
+       "3                        Erin Brockovich (2000)    [1, 0, 0]  \n",
+       "4                          Bug's Life, A (1998)   [15, 9, 2]  \n",
+       "...                                         ...          ...  \n",
+       "1000204              Weekend at Bernie's (1989)    [2, 0, 0]  \n",
+       "1000205                 Crying Game, The (1992)   [1, 5, 11]  \n",
+       "1000206         Welcome to the Dollhouse (1995)    [2, 1, 0]  \n",
+       "1000207                  Sophie's Choice (1982)    [1, 0, 0]  \n",
+       "1000208       E.T. the Extra-Terrestrial (1982)   [1, 16, 8]  \n",
+       "\n",
+       "[1000209 rows x 10 columns]"
       ]
      },
      "execution_count": 12,
@@ -490,13 +686,81 @@
     }
    ],
    "source": [
-    "pad_sequences(seq, maxlen=3,padding='post')"
+    "matrix = pd.merge(pd.merge(ratings, users), movies)\n",
+    "matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "a570f79a-657c-4fb4-8d57-0740ac4105c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train, test = train_test_split(matrix, test_size=0.2, random_state=7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0b5f20c9-e5e7-4413-8047-02fcd0338a27",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def define_input_layers():\n",
+    "    # numerical features\n",
+    "    age = Input((1,), name = 'input_age')\n",
+    "\n",
+    "    # single-level categorical features\n",
+    "    userID = Input((1,), name = 'input_uid')\n",
+    "    movieID = Input((1,), name= 'input_mid')\n",
+    "\n",
+    "    # multi-level categorical features\n",
+    "    genres = Input((3,), name = 'input_genres')\n",
+    "\n",
+    "    return age, userID, movieID, genres"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "badd5276-ab7e-41d0-a62f-8f0e30a01fb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "can't use starred expression here (791117344.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    age, userID, movieID, genres = *define_input_layers()\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't use starred expression here\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fm_1st(inputs, n_uid, n_mid, n_genre):\n",
+    "    age, userID, movieID, genres = define_input_layers()\n",
+    "\n",
+    "    # all tensors are reshaped to (None, 1)\n",
+    "    num_dense_1d = [Dense(1, name = 'num_dense_1d_fea4')(fea3_input)]\n",
+    "    cat_sl_embed_1d = [Embedding(n_uid + 1, 1, name = 'cat_embed_1d_uid')(uid_input),\n",
+    "                        Embedding(n_mid + 1, 1, name = 'cat_embed_1d_mid')(mid_input)]\n",
+    "    cat_ml_embed_1d = [Embedding(n_genre + 1, 1, mask_zero=True, name = 'cat_embed_1d_genre')(genre_input)]\n",
+    "\n",
+    "    cat_sl_embed_1d = [Reshape((1,))(i) for i in cat_sl_embed_1d]\n",
+    "    cat_ml_embed_1d = [Tensor_Mean_Pooling(name = 'embed_1d_mean')(i) for i in cat_ml_embed_1d]\n",
+    "\n",
+    "    # add all tensors\n",
+    "    y_fm_1d = Add(name = 'fm_1d_output')(num_dense_1d + cat_sl_embed_1d + cat_ml_embed_1d)\n",
+    "\n",
+    "    return y_fm_1d\n",
+    "\n",
+    "y_1d = fm_1st(inputs, 10, 10, 10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7b9ce3",
+   "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
    "metadata": {},
    "outputs": [],
    "source": []
