some more new stuff

--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -21,10 +21,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 2,
    "id": "cfb0c761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-05-12 17:11:43.013811: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -32,7 +41,7 @@
     "from collections import Counter\n",
     "from itertools import chain\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from tensorflow.keras.layers import Dense, Input\n",
+    "from tensorflow.keras.layers import Dense, Embedding, Input, Lambda, Reshape\n",
     "from tensorflow.keras.models import Model\n",
     "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
     "from tensorflow.keras.preprocessing.text import Tokenizer"
@@ -366,7 +375,8 @@
     "genres = movies[\"genres\"].apply(lambda x: x.split(\"|\"))\n",
     "genres = chain.from_iterable(genres)\n",
     "count_genres = dict(Counter(genres))\n",
-    "print(f\"num_genres: {len(count_genres)}\\n\", dict(sorted(count_genres.items(), key=lambda item: item[1], reverse=True)))"
+    "num_genres = len(count_genres)\n",
+    "print(f\"num_genres: {num_genres}\\n\", dict(sorted(count_genres.items(), key=lambda item: item[1], reverse=True)))"
    ]
   },
   {
@@ -412,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "73f6f886-633b-4689-9b04-398539f6f0c7",
    "metadata": {},
    "outputs": [],
@@ -422,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "226f4b42",
    "metadata": {},
    "outputs": [],
@@ -433,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "91649392",
    "metadata": {},
    "outputs": [
@@ -454,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "41d7f127-6e21-4ea6-ae69-f50b22c53c1e",
    "metadata": {},
    "outputs": [],
@@ -464,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "db1ba1f9-0cef-419a-a628-3d596bac894b",
    "metadata": {},
    "outputs": [
@@ -680,7 +690,7 @@
        "[1000209 rows x 10 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -692,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "a570f79a-657c-4fb4-8d57-0740ac4105c6",
    "metadata": {},
    "outputs": [],
@@ -702,51 +712,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "id": "0b5f20c9-e5e7-4413-8047-02fcd0338a27",
    "metadata": {},
    "outputs": [],
    "source": [
     "def define_input_layers():\n",
     "    # numerical features\n",
-    "    age = Input((1,), name = 'input_age')\n",
+    "    age = Input((1,),)\n",
     "\n",
     "    # single-level categorical features\n",
-    "    userID = Input((1,), name = 'input_uid')\n",
-    "    movieID = Input((1,), name= 'input_mid')\n",
+    "    userID = Input((1,))\n",
+    "    movieID = Input((1,))\n",
     "\n",
     "    # multi-level categorical features\n",
-    "    genres = Input((3,), name = 'input_genres')\n",
+    "    genres = Input((3,))\n",
     "\n",
     "    return age, userID, movieID, genres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "id": "badd5276-ab7e-41d0-a62f-8f0e30a01fb4",
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "can't use starred expression here (791117344.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[30], line 2\u001b[0;36m\u001b[0m\n\u001b[0;31m    age, userID, movieID, genres = *define_input_layers()\u001b[0m\n\u001b[0m                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m can't use starred expression here\n"
-     ]
+     "data": {
+      "text/plain": [
+       "\"\\n    cat_ml_embed_1d = [Tensor_Mean_Pooling(name = 'embed_1d_mean')(i) for i in cat_ml_embed_1d]\\n\\n    # add all tensors\\n    y_fm_1d = Add(name = 'fm_1d_output')(num_dense_1d + cat_sl_embed_1d + cat_ml_embed_1d)\\n\\n    return y_fm_1d\\n\\ny_1d = first_order_interactions(inputs, 10, 10, 10)\\n\""
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def fm_1st(inputs, n_uid, n_mid, n_genre):\n",
+    "def first_order_interactions(inputs, max_uid, max_mid, num_genres):\n",
     "    age, userID, movieID, genres = define_input_layers()\n",
     "\n",
     "    # all tensors are reshaped to (None, 1)\n",
-    "    num_dense_1d = [Dense(1, name = 'num_dense_1d_fea4')(fea3_input)]\n",
-    "    cat_sl_embed_1d = [Embedding(n_uid + 1, 1, name = 'cat_embed_1d_uid')(uid_input),\n",
-    "                        Embedding(n_mid + 1, 1, name = 'cat_embed_1d_mid')(mid_input)]\n",
-    "    cat_ml_embed_1d = [Embedding(n_genre + 1, 1, mask_zero=True, name = 'cat_embed_1d_genre')(genre_input)]\n",
+    "    dense_age = Dense(1)(age)\n",
     "\n",
-    "    cat_sl_embed_1d = [Reshape((1,))(i) for i in cat_sl_embed_1d]\n",
+    "    embed_uid = Embedding(max_uid+1, 1)(userID)\n",
+    "    reshape_uid = Reshape((1,))(embed_uid)\n",
+    "\n",
+    "    embed_mid = Embedding(max_mid+1, 1)(movieID)\n",
+    "    reshape_mid = Reshape((1,))(embed_mid)\n",
+    "\n",
+    "    embed_genres = Embedding(num_genres+1, 1, mask_zero=True)(genres)\n",
+    "\n",
+    "    \n",
+    "\"\"\"\n",
     "    cat_ml_embed_1d = [Tensor_Mean_Pooling(name = 'embed_1d_mean')(i) for i in cat_ml_embed_1d]\n",
     "\n",
     "    # add all tensors\n",
@@ -754,16 +772,83 @@
     "\n",
     "    return y_fm_1d\n",
     "\n",
-    "y_1d = fm_1st(inputs, 10, 10, 10)"
+    "y_1d = first_order_interactions(inputs, 10, 10, 10)\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
+   "execution_count": 21,
+   "id": "e00bc2d3-00eb-46f0-8b44-e3f08e832cd7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def Tensor_Mean_Pooling(keepdims=False):\n",
+    "    return Lambda(lambda x: K.mean(x, axis = 1, keepdims=keepdims), mask=lambda )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Embedding.compute_mask() missing 1 required positional argument: 'inputs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[27], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m embed_genres \u001b[38;5;241m=\u001b[39m Embedding(\u001b[38;5;241m19\u001b[39m, \u001b[38;5;241m1\u001b[39m, mask_zero\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m embedded_genres \u001b[38;5;241m=\u001b[39m embed_genres(genres)\n\u001b[0;32m----> 4\u001b[0m tmp \u001b[38;5;241m=\u001b[39m Tensor_Mean_Pooling(\u001b[43membed_genres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)(embed_genres)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Embedding.compute_mask() missing 1 required positional argument: 'inputs'"
+     ]
+    }
+   ],
+   "source": [
+    "genres = Input((3,))\n",
+    "embed_genres = Embedding(19, 1, mask_zero=True)\n",
+    "embedded_genres = embed_genres(genres)\n",
+    "tmp = Tensor_Mean_Pooling(embed_genres.compute_mask())(embed_genres)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "5bd05816-bc9e-40da-a460-a246d654fdb3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Model(inputs=genres, outputs=tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "81b7ba92-dca1-42e9-a821-73a031bc4494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.0011593]], dtype=float32)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(np.array([[18, 0, 1]]))"
+   ]
   }
  ],
  "metadata": {
