mask not masking

--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -29,7 +29,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-05-12 17:11:43.013811: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2024-05-12 19:26:28.725491: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -427,7 +427,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# is this the best way?? why not three-hot?"
+    "# is this the best way?? why not three-hot? with encoding_initializer='eye'"
    ]
   },
   {
@@ -719,7 +719,7 @@
    "source": [
     "def define_input_layers():\n",
     "    # numerical features\n",
-    "    age = Input((1,),)\n",
+    "    age = Input((1,))\n",
     "\n",
     "    # single-level categorical features\n",
     "    userID = Input((1,))\n",
@@ -778,54 +778,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 86,
    "id": "e00bc2d3-00eb-46f0-8b44-e3f08e832cd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def Tensor_Mean_Pooling(keepdims=False):\n",
-    "    return Lambda(lambda x: K.mean(x, axis = 1, keepdims=keepdims), mask=lambda )"
+    "def Tensor_Mean_Pooling(keepdims=False, mask=None):\n",
+    "    return Lambda(lambda x: K.mean(x, axis=1, keepdims=keepdims), mask=mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 148,
    "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "Embedding.compute_mask() missing 1 required positional argument: 'inputs'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m embed_genres \u001b[38;5;241m=\u001b[39m Embedding(\u001b[38;5;241m19\u001b[39m, \u001b[38;5;241m1\u001b[39m, mask_zero\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m      3\u001b[0m embedded_genres \u001b[38;5;241m=\u001b[39m embed_genres(genres)\n\u001b[0;32m----> 4\u001b[0m tmp \u001b[38;5;241m=\u001b[39m Tensor_Mean_Pooling(\u001b[43membed_genres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcompute_mask\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)(embed_genres)\n",
-      "\u001b[0;31mTypeError\u001b[0m: Embedding.compute_mask() missing 1 required positional argument: 'inputs'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "genres = Input((3,))\n",
     "embed_genres = Embedding(19, 1, mask_zero=True)\n",
     "embedded_genres = embed_genres(genres)\n",
-    "tmp = Tensor_Mean_Pooling(embed_genres.compute_mask())(embed_genres)"
+    "#res = embedded_genres._keras_mask"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 149,
    "id": "5bd05816-bc9e-40da-a460-a246d654fdb3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/bluraygun/Documents/tfg/tflow/lib/python3.10/site-packages/keras/src/layers/layer.py:877: UserWarning: Layer 'lambda_42' (of type Lambda) was passed an input with a mask attached to it. However, this layer does not support masking and will therefore destroy the mask information. Downstream layers will not see the mask.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = Tensor_Mean_Pooling(mask=None)(embedded_genres)\n",
+    "model = Model(inputs=genres, outputs=embedded_genres)\n",
+    "#model = Model(inputs=genres, outputs=tmp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "81b7ba92-dca1-42e9-a821-73a031bc4494",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 44ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0.03650458],\n",
+       "        [-0.0165148 ],\n",
+       "        [ 0.01124831]]], dtype=float32)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(np.array([[18, 0, 2]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f06f9a10-73d6-426a-9738-97d6c866b196",
    "metadata": {},
    "outputs": [],
    "source": [
+    "tmp = Tensor_Mean_Pooling(mask=embed_genres.compute_mask(genres))(embedded_genres)\n",
     "model = Model(inputs=genres, outputs=tmp)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "81b7ba92-dca1-42e9-a821-73a031bc4494",
+   "execution_count": 91,
+   "id": "a2ad3d36-019f-4f00-b005-12c28ae314d0",
    "metadata": {},
    "outputs": [
     {
@@ -838,17 +878,54 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.0011593]], dtype=float32)"
+       "array([[0.00351239]], dtype=float32)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(np.array([[18, 0, 1]]))"
+    "model.predict(np.array([[18, 0, 2]]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9bd6dce1-7b0b-4291-9cc2-97e616a63738",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "f28355f6-c44d-4373-a640-f3a42912d48d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.020458236666666667"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([0.03168437, -0.01888443, 0.04857477]).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eee2aef4-7f69-464f-b540-3cecbf980535",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
