found way to check masked mean

--- a/Recommender.ipynb
+++ b/Recommender.ipynb
@@ -21,22 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 31,
    "id": "cfb0c761",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-05-12 19:26:28.725491: I tensorflow/core/platform/cpu_feature_guard.cc:210] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import tensorflow as tf\n",
     "import tensorflow.keras.backend as K\n",
     "from collections import Counter\n",
     "from itertools import chain\n",
@@ -778,18 +770,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 62,
    "id": "e00bc2d3-00eb-46f0-8b44-e3f08e832cd7",
    "metadata": {},
    "outputs": [],
    "source": [
     "def Tensor_Mean_Pooling(keepdims=False, mask=None):\n",
-    "    return Lambda(lambda x: K.mean(x, axis=1, keepdims=keepdims), mask=mask)"
+    "    return Lambda(lambda x: tf.reduce_mean(x, axis=1, keepdims=keepdims), mask=mask)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 59,
+   "id": "aea09bd7-970e-427a-9326-69c99f5e157a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Tensor_Mean_Pooling2(keepdims=False, mask=None):\n",
+    "    def masked_zero_mean(tensor):\n",
+    "        return tf.reduce_sum(tensor)/tf.reduce_sum(mask)\n",
+    "    return Lambda(masked_zero_mean, mask=mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
    "id": "2c566a0c-5320-43fc-8298-18b8aa661c46",
    "metadata": {},
    "outputs": [],
@@ -802,58 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "5bd05816-bc9e-40da-a460-a246d654fdb3",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/bluraygun/Documents/tfg/tflow/lib/python3.10/site-packages/keras/src/layers/layer.py:877: UserWarning: Layer 'lambda_42' (of type Lambda) was passed an input with a mask attached to it. However, this layer does not support masking and will therefore destroy the mask information. Downstream layers will not see the mask.\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
-   "source": [
-    "tmp = Tensor_Mean_Pooling(mask=None)(embedded_genres)\n",
-    "model = Model(inputs=genres, outputs=embedded_genres)\n",
-    "#model = Model(inputs=genres, outputs=tmp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 150,
-   "id": "81b7ba92-dca1-42e9-a821-73a031bc4494",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 44ms/step\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[[ 0.03650458],\n",
-       "        [-0.0165148 ],\n",
-       "        [ 0.01124831]]], dtype=float32)"
-      ]
-     },
-     "execution_count": 150,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.predict(np.array([[18, 0, 2]]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 63,
    "id": "f06f9a10-73d6-426a-9738-97d6c866b196",
    "metadata": {},
    "outputs": [],
@@ -864,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 64,
    "id": "a2ad3d36-019f-4f00-b005-12c28ae314d0",
    "metadata": {},
    "outputs": [
@@ -872,35 +826,55 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 47ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 49ms/step\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[0.00351239]], dtype=float32)"
+       "array([[0.03916447]], dtype=float32)"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(np.array([[18, 0, 2]]))"
+    "model.predict(np.array([[18, 18, 18]]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "9bd6dce1-7b0b-4291-9cc2-97e616a63738",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 24ms/step\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.04070656]], dtype=float32)"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(np.array([[18, 0, 0]]))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "id": "f28355f6-c44d-4373-a640-f3a42912d48d",
    "metadata": {},
    "outputs": [
@@ -910,7 +884,7 @@
        "0.020458236666666667"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
